Add authorization via VK and display the name

--- a/PlacesRemember/templates/impressions/index.html
+++ b/PlacesRemember/templates/impressions/index.html
@@ -12,7 +12,7 @@
  Присоединяйтесь и начните делиться своими воспоминаниями уже сегодня!
         </p>
         <div class="index__actions">
-            <button class="index__inner-vk">
+            <button class="index__inner-vk" onclick="location.href='{% url 'social:begin' 'vk-oauth2' %}'">
                 <i class="fa-regular fa-address-card"></i>Войти с помощью VK</button>
         </div>
     </div>
