--- a/PlacesRemember/templates/layout.html
+++ b/PlacesRemember/templates/layout.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.1/css/all.css">
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css" integrity="sha384-gSgWj0ECklP64jrfz4BS3LWz963zC6F+KRStK2nndJ4nL3CwUmTitdUyWCvA9XOF" crossorigin=""/>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js" integrity="sha384-BJNG2BexFksW3bH/hUPTfxybYxRlY4E6iKweDovGipbcLXlR+v9GzD4tR1EOQa6Y" crossorigin=""></script>
+    {% block header %}{% endblock %}
 </head>
 
 
